--- a/src/sass/config/_colors.scss
+++ b/src/sass/config/_colors.scss
@@ -11,7 +11,7 @@ $white: #e8e8e8;
 
 
 /* Theme Colors */
-$primaryColor: #6563ff;
+$primaryColor: #2166A0;
 $primaryColor_light: saturate(lighten($primaryColor, 10%), 20%);
 $primaryColor_dark: desaturate(darken($primaryColor, 20%), 30%);
 
